Added Publication System to Process Specs

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -1211,9 +1211,41 @@
 		Certain use cases require further information with regards to their function.\\ These use cases are specified further by means of process specification.
 		\subsubsection{Publication Sub-System}
 			\begin{figure}[H]
-				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/Publication subsystem/x.jpg}
-				\caption{User - x}
+				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/Publication subsystem/Add_Edit Own Paper Entry.jpg}
+				\caption{User - Add/Edit Own Paper Entry}
 			\end{figure}
+			\begin{figure}[H]
+				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/Publication subsystem/Edit Own Paper Progress.jpg}
+				\caption{User - Edit Own Paper Progress}
+			\end{figure}
+			\begin{figure}[H]
+					\includegraphics[width=4in, center]{../Diagrams/Process Specifications/Publication subsystem/Terminate_Resume Own Paper.jpg}
+					\caption{User - Terminate/Resume Own Paper}
+			\end{figure}
+			\begin{figure}[H]
+				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/Publication subsystem/Add_Remove Authors from a paper.jpg}
+				\caption{User - Add/Remove Authors From a Paper}
+			\end{figure}
+			\begin{figure}[H]
+				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/Publication subsystem/Add_Remove PublicationType From Paper.jpg}
+				\caption{User - Add/Remove PublicationType From Paper}
+			\end{figure}
+			\begin{figure}[H]
+				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/Publication subsystem/Add_Edit Author.jpg}
+				\caption{User - Add/Edit Author}
+			\end{figure}
+			\begin{figure}[H]
+				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/Publication subsystem/Add_Edit PublicationType.jpg}
+				\caption{User - Add/Edit PublicationType}
+			\end{figure}
+			\begin{figure}[H]
+				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/Publication subsystem/Search All Papers.jpg}
+				\caption{Head of Research/Admin - Search All Papers}
+			\end{figure}
+			\begin{figure}[H]
+				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/Publication subsystem/Purge Paper.jpg}
+				\caption{Admin - Purge Paper}
+			\end{figure}	
 		\subsubsection{User Sub-System}
 			\begin{figure}[H]
 				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/User subsystem/Login.jpg}
@@ -1286,14 +1318,18 @@
 			
 			\subsubsection{Group Control Sub-System}
 				\begin{figure}[H]
-				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/Publication subsystem/x.jpg}
-				\caption{User - x}
+				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/Group control subsystem/Add Research Group.jpg}
+				\caption{Admin - Add Research Group}
 			\end{figure}
 			\subsubsection{Logging Sub-System}
 				\begin{figure}[H]
-				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/Publication subsystem/x.jpg}
-				\caption{User - x}
-			\end{figure}
+					\includegraphics[width=4in, center]{../Diagrams/Process Specifications/Logging subsystem/Archive Logs.jpg}
+					\caption{DateTime - Archive Logs}
+				\end{figure}
+				\begin{figure}[H]
+					\includegraphics[width=4in, center]{../Diagrams/Process Specifications/Logging subsystem/Download log files.jpg}
+					\caption{Admin - Download Log Files}
+				\end{figure}
 			
 		\cleardoublepage
 		\subsection{Domain Model}\label{subsec:domainmodel}
